@@ -1,3 +1,10 @@
+Tue Feb  5 19:31:42 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * cuts/performance_i.cpp:
+
+          Added a NULL check when extracting metrics into the a
+          port metric.
+
 Tue Feb  5 17:04:04 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * cuts/Component_Registry.cpp:
